[gd_scene load_steps=5 format=3 uid="uid://dfi827fnnkjm5"]

[ext_resource type="Texture2D" uid="uid://cav06i83gbw0p" path="res://ASSETS/MainMenuBackground.png" id="1_iukft"]
[ext_resource type="Script" uid="uid://5hg4uf0cosmx" path="res://Scenes/MainMenu.gd" id="1_j5yw3"]
[ext_resource type="Texture2D" uid="uid://dygookp3a44u4" path="res://ASSETS/PlayBtn.png" id="3_kldst"]
[ext_resource type="Texture2D" uid="uid://d1lwpicefa2df" path="res://ASSETS/BackBtn.png" id="4_ghw46"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_j5yw3")

[node name="MainMenuBackground" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -18.0
offset_top = -18.0
offset_right = 515.0
offset_bottom = 663.0
texture = ExtResource("1_iukft")

[node name="PlayBtn" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 170.0
offset_top = 236.0
offset_right = 321.0
offset_bottom = 371.0
texture_normal = ExtResource("3_kldst")
ignore_texture_size = true
stretch_mode = 0

[node name="QuitBtn" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 555.0
offset_right = 89.0
offset_bottom = 630.0
texture_normal = ExtResource("4_ghw46")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="QuitBtn" to="." method="_on_quit_btn_pressed"]
